# terminal-renderer

./: .gitignore  CMakeLists.txt  README.md
include/terminal/: resources.hpp  utils.hpp
include/tren/: renderer.hpp
performance_test/: CMakeLists.txt  config.cpp  main.cpp
rotation_test/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  color.cpp  color.hpp  frame.cpp  frame.hpp  frame_unit.cpp  frame_unit.hpp  image.cpp  image.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  terminal.cpp  terminal.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  main.cpp  renderer-config.cpp
